# test

./: .gitignore  .gitmodules  .gitmodules.swp  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  README.md  bruh.cpp  bruh.h  foo.cpp  main.cpp
libs/SFML/lib/: libsfml-audio.so.2.5.1  libsfml-graphics.so.2.5.1  libsfml-network.so.2.5.1  libsfml-window.so.2.5.1
tests/: test.cpp
